fix(client): make progress bar in course cards aligned

--- a/judgels-client/src/components/ContentCard/ContentCard.scss
+++ b/judgels-client/src/components/ContentCard/ContentCard.scss
@@ -1,8 +1,7 @@
 @import '../../styles/variables/colors';
 
 .content-card {
-  padding: 15px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   overflow: auto;
 
   h3 {
