--- a/judgels-client/src/routes/courses/courses/CourseCard/CourseCard.scss
+++ b/judgels-client/src/routes/courses/courses/CourseCard/CourseCard.scss
@@ -1,8 +1,17 @@
+.course-card {
+  display: flex;
+  flex-direction: column;
+
+  hr {
+    margin-top: 0 !important;
+  }
+}
+
 .course-card__title {
   font-size: 20px !important;
   line-height: 20px !important;
 }
 
-.course-card__subtitle {
-  font-size: 12px !important;
+.course-card__progress-bar {
+  margin-top: auto;
 }
